# IronFox

./: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyrightconfig.json
builder/: .gitignore  README.md  pyproject.toml
builder/builder/: __init__.py  cli.py
builder/builder/commands/: base.py  build.py  prepare.py  setup.py
builder/builder/common/: config.py  git.py  input.py  paths.py  utils.py  versions.py
builder/builder/execution/: clone.py  definition.py  download.py  executor.py  extract.py  files.py  patch.py  run.py
builder/builder/steps/: setup.py
builder/src/: cli.py
builder/src/commands/: base.py  build.py  prepare.py  setup.py  utils.py
builder/src/common/: config.py  git.py  locales.py  logging.py  patches.py  paths.py  subproc.py  utils.py  versions.py
builder/src/execution/: clone.py  common.py  definition.py  download.py  executor.py  extract.py  files.py  find_replace.py  localize_maven.py  overlay.py  parallel.py  patch.py  run.py  sed.py  task_graph.py  types.py
builder/src/steps/common/: java.py
builder/src/steps/prepare/: __init__.py  android_components.py  application_services.py  deglean.py  fenix.py  firefox.py  glean.py  noop_moz_endpoints.py  uniffi.py  wasi_sdk.py
builder/src/steps/setup/: __init__.py  android_sdk.py  java.py  phoenix.py  rust.py
docs/: FAQ.md  Features.md  Limitations.md  Network-Connections.md  NightlyVsRelease.md  README.md  Safe-Browsing.md
patches/: a-c-allow-build-date-override.patch  a-c-allow-ubo-in-private-browsing-by-default.patch  a-c-configure-default-search-engines.patch  a-c-disable-amo-collections.patch  a-c-disable-crash-reporting.patch  a-c-disable-extension-data-collection.patch  a-c-disable-unsolicited-favicon-fetching.patch  a-c-display-builtin-addons.patch  a-c-enable-geckoview-substitution.patch  a-c-ironfox-settings.patch  (+319 more)
(+424 files in other folders)
