[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ironfox"
version = "0.1.0"
description = "Python scripts to build IronFox."
authors = [
  { name = "Akash Yadav", email = "contact@itsaky.com" },
  { name = "celenity", email = "celenity@celenity.dev" },
]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["ironfox"]

dependencies = [
  "requests>=2.25.0",
  "click>=8.0.0",
  "rich>=12.0.0",
  "PyYAML>=6.0.3",
  "pydantic>=2.12.3",
  "aiofiles>=25.1.0",
  "networkx>=3.2.1",
  "matplotlib>=3.9.4",
]

[project.urls]
Homepage = "https://gitlab.com/ironfox-oss/IronFox"
Documentation = "https://gitlab.com/ironfox-oss/IronFox#readme"
Repository = "https://gitlab.com/ironfox-oss/IronFox"
"Bug Tracker" = "https://gitlab.com/ironfox-oss/IronFox/-/issues"

[project.scripts]
ironfox = "cli:cli"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
